# rpi5-system-monitor

./: Cargo.toml
public/: bootstrap.js  index.html  styles.css
public/app/: App.js  Config.js  HypertextAppEngine.js  Router.js  Views.js
src/: main.rs
src/app/: mod.rs
src/env/: mod.rs
src/log/: mod.rs
src/models/: mod.rs
src/models/builders/: mod.rs
src/models/builders/component_info/: mod.rs
src/models/builders/cpu_info/: mod.rs
src/models/builders/disk_info/: mod.rs
src/models/builders/network_info/: mod.rs
src/models/builders/system_info_builder/: mod.rs
src/models/data_objects/: mod.rs
src/models/data_objects/component_info/: mod.rs
src/models/data_objects/cpu_info/: mod.rs
src/models/data_objects/disk_info/: mod.rs
src/models/data_objects/network_info/: mod.rs
src/models/data_objects/system_info/: mod.rs
src/models/system_report/: mod.rs
src/models/temperature_severity_status/: mod.rs
src/services/: mod.rs
src/services/health/: mod.rs
src/services/http_views/: mod.rs
src/services/json_views/: mod.rs
src/services/system/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
