[package]
name = "system-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
actix-files = "0.6.6"
anyhow = "1.0"
debugrs = "0.2.1"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
sysinfo = "0.34.2"
tokio = { version = "1.43.0", features = ["full"] }